@@ -42,8 +42,6 @@ namespace WebCore {
 
         SVGSVGElement* rootElement() const;
         
-        virtual PassRefPtr<Element> createElement(const String& tagName, ExceptionCode&);
-        
         void dispatchZoomEvent(float prevScale, float newScale);
         void dispatchScrollEvent();
 
